# dj-aws

./: .env.sample  README.md  pyproject.toml
.github/workflows/: dev-pr.yml  dev.yml  feature-pr.yml  production.yml
.run/: test.run.xml
config/settings/: base.py
djaws/: cloudformation_api.py  cognito_api.py
djaws/management/commands/: describe_stacks.py
djaws/tests/: test_cognito_api.py
